--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/?????useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=????
+spring.datasource.password=????
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
