--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,intellij,macos,windows
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij,macos,windows
+# Created by https://www.toptal.com/developers/gitignore/api/intellij,visualstudiocode,gradle,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=intellij,visualstudiocode,gradle,java
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -140,64 +140,54 @@ fabric.properties
 hs_err_pid*
 replay_pid*
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-# Icon must end with two \r
-Icon
+# Local History for Visual Studio Code
+.history/
 
+# Built Visual Studio Code Extensions
+*.vsix
 
-# Thumbnails
-._*
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+### Gradle ###
+.gradle
+**/build/
+!src/**/build/
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Ignore Gradle GUI config
+gradle-app.setting
 
-### macOS Patch ###
-# iCloud generated files
-*.icloud
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
 
-# Dump file
-*.stackdump
+# Cache of project
+.gradletasknamecache
 
-# Folder config file
-[Dd]esktop.ini
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+### Gradle Patch ###
+# Java heap dump
+*.hprof
 
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
+#
+application-local.yml
+application-dev.yml
 
-# Windows shortcuts
-*.lnk
-
-# VsCode
-/.vscode
+# End of https://www.toptal.com/developers/gitignore/api/intellij,visualstudiocode,gradle,java
